tests/codegen/fail/subscription/field_non_output_return_type.stderr
error[E0277]: the trait bound `ObjB: IsOutputType<__S>` is not satisfied
  --> fail/subscription/field_non_output_return_type.rs:17:27
   |
17 |     async fn id(&self) -> Stream<'static, ObjB> {
   |                           ^^^^^^^^^^^^^^^^^^^^^ the trait `IsOutputType<__S>` is not implemented for `ObjB`
   |
   = help: the following other types implement trait `IsOutputType<S>`:
             <&T as IsOutputType<S>>
             <Arc<T> as IsOutputType<S>>
             <Box<T> as IsOutputType<S>>
             <EnumValue as IsOutputType<__S>>
             <ID as IsOutputType<__S>>
             <ObjA as IsOutputType<__S>>
             <SchemaType<'a, S> as IsOutputType<S>>
             <TypeKind as IsOutputType<__S>>
           and 18 others
